--- a/views/index.ejs
+++ b/views/index.ejs
@@ -325,6 +325,16 @@
 
             link.value = window.location.href;
 
+            qrCode.innerHTML = ""; //Clear qrcode
+            var code = new QRCode(qrCode, { //Generate qrcode
+                text: window.location.href,
+                width: 128,
+                height: 128,
+                colorDark: "#000000",
+                colorLight: "#ffffff",
+                correctLevel: QRCode.CorrectLevel.H,
+            });
+
             deviceList.innerHTML = '';
             Array.from(socketsInRoom).forEach((socketId) => {
                 if (socketId != socket.id)
