--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,8 +12,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&family=Rubik:wght@300;400;500&display=swap"
         rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
+    <script src="/js/sweetalert2.js"></script>
+    <script src="/js/qrcode.min.js"></script>
     <title>Emmet Drop - File transfer app</title>
 </head>
 
