--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,5 +1,4 @@
-body
-{
+body {
     font-family: 'Rubik', sans-serif;
     display: flex;
     justify-content: center;
@@ -9,27 +8,24 @@ body
     overflow: hidden;
 }
 
-.mdi
-{
-    pointer-events: none;
-}
-
-.mdi-bluetooth, .mdi-wifi, .mdi-web
-{
+.mdi-bluetooth,
+.mdi-wifi,
+.mdi-web {
     padding-right: 5px;
     margin-left: 20px;
     font-size: 21px;
+    pointer-events: none;
 }
 
-.mdi-checkbox-blank-outline, .mdi-checkbox-marked
-{
+.mdi-checkbox-blank-outline,
+.mdi-checkbox-marked {
     margin-left: 0;
     margin-right: 5px;
     font-size: 21px;
+    pointer-events: none;
 }
 
-.menu-button
-{
+.menu-button {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -45,24 +41,21 @@ body
     transition: all ease-in-out 0.2s;
 }
 
-.menu-button:hover
-{
+.menu-button:hover {
     background-color: rgb(207, 207, 207);
 }
 
-.curtain
-{
+.curtain {
     width: 100%;
     height: 100vh;
     position: absolute;
     background-color: rgba(0, 0, 0);
-    z-index: 1;
+    z-index: 2;
     transition: all ease-in-out 0.2s;
     opacity: 0.34;
 }
 
-.menu
-{
+.menu {
     position: absolute;
     right: 0;
     background-color: white;
@@ -74,8 +67,7 @@ body
     overflow-y: scroll;
 }
 
-.file-history-header
-{
+.file-history-header {
     display: flex;
     align-items: center;
     font-size: 24px;
@@ -83,8 +75,7 @@ body
     padding: 15px;
 }
 
-.mdi-history
-{
+.mdi-history {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -92,15 +83,13 @@ body
     font-size: 30px;
 }
 
-.file-list
-{
+.file-list {
     display: flex;
     align-items: center;
     flex-direction: column;
 }
 
-.list-file
-{
+.list-file {
     width: 92%;
     max-height: 60px;
     padding: 0 !important;
@@ -108,75 +97,68 @@ body
     min-width: 250px !important;
 }
 
-.list-file .file-info
-{
+.list-file .file-info {
     width: 100%;
 }
 
-.list-file:hover
-{
+.list-file:hover {
     cursor: pointer;
     background-color: whitesmoke;
 }
 
-.file-download
-{
+.list-file:last-child {
+    margin-bottom: 15px;
+}
+
+.file-download {
     font-size: 28px;
     margin-left: 15px;
     margin-right: 20px;
 }
 
-.app
-{
+.app {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.app-header
-{
+.app-header {
     font-size: 40px;
     font-weight: 300;
     margin-top: 80px;
 }
 
-.qr
-{
+.qr {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.qr-header
-{
+.qr-header {
     font-size: 21px;
     font-weight: 300;
     margin-bottom: 10px;
 }
 
-.sharelink
-{
+.sharelink {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.sharelink-header
-{
+.sharelink-header {
     font-size: 21px;
     font-weight: 300;
 }
 
-.link-wrapper
-{
+.link-wrapper {
     margin-top: 15px;
     display: flex;
     justify-content: center;
     max-height: 45px;
 }
 
-.link
-{
+.link {
     padding: 13px;
     font-size: 14px;
     border-top-left-radius: 5px;
@@ -188,8 +170,7 @@ body
     border-right: 0;
 }
 
-.link-button
-{
+.link-button {
     min-width: 110px;
     padding: 13px;
     font-size: 14px;
@@ -201,31 +182,26 @@ body
     transition: all ease-in-out 0.2s;
 }
 
-.link-button:hover
-{
+.link-button:hover {
     cursor: pointer;
     background-color: rgb(218, 218, 218);
 }
 
-.devices
-{
+.devices {
     margin-top: 50px;
 }
 
-.devices-header
-{
+.devices-header {
     text-align: center;
     font-size: 21px;
     font-weight: 300;
 }
 
-.device-list
-{
+.device-list {
     margin-top: 20px;
 }
 
-.device
-{
+.device {
     max-width: 300px;
     display: flex;
     align-items: center;
@@ -237,53 +213,66 @@ body
     z-index: 1000;
 }
 
-.device:first-child
-{
+.device:first-child {
     border: none;
 }
 
-.device:hover
-{
+.device:hover {
     cursor: pointer;
     background-color: rgb(231, 231, 231);
 }
 
-.file
+.file-wrapper {
+    position: relative;
+    margin-top: 30px;
+}
+
+.mdi-close-box {
+    font-size: 28px;
+    position: absolute;
+    right: -12px;
+    top: -12px;
+    z-index: 1;
+    color: rgb(255, 87, 87);
+    background-color: white;
+    transition: all ease-in-out 0.1s;
+}
+
+.mdi-close-box:hover
 {
+    cursor: pointer;
+    color: rgb(226, 36, 36);
+}
+
+.file {
     display: flex;
     flex-direction: row;
     align-items: center;
     padding-right: 100px;
-    margin-top: 30px;
     border: 1px solid rgb(158, 158, 158);
     border-radius: 5px;
     min-width: 200px;
     overflow: hidden;
 }
 
-.file-icon
-{
+.file-icon {
     font-size: 38px;
     padding: 10px;
 }
 
-.file-info
-{
+.file-info {
     padding: 5px;
 }
 
-.file-name
-{
+.file-name {
     font-size: 16px;
 }
 
-.file-size
-{
+.file-size {
     font-size: 13px;
 }
 
-.file-progress
-{
+.file-progress {
     width: 100%;
     border-radius: 50%;
     height: 2px;
@@ -291,8 +280,7 @@ body
     margin-top: 6px;
 }
 
-.actual-file-progress
-{
+.actual-file-progress {
     width: 65%;
     border-radius: 50%;
     height: 2px;
@@ -300,16 +288,14 @@ body
     margin-top: 6px;
 }
 
-.upload-widgets
-{
+.upload-widgets {
     margin-top: 30px;
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
 
-.upload-button
-{
+.upload-button {
     padding: 10px;
     padding-left: 20px;
     padding-right: 20px;
@@ -323,14 +309,12 @@ body
     transition: all ease-in-out 0.2s;
 }
 
-.upload-button:hover
-{
+.upload-button:hover {
     cursor: pointer;
     background-color: rgba(75, 75, 75, 0.80);
 }
 
-.upload-cancel
-{
+.upload-cancel {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -345,14 +329,12 @@ body
     transition: all ease-in-out 0.2s;
 }
 
-.upload-cancel:hover
-{
+.upload-cancel:hover {
     cursor: pointer;
     background-color: rgb(199, 85, 85);
 }
 
-.link-related
-{
+.link-related {
     flex: 1 1 0px;
     margin-top: 35px;
     display: flex;
@@ -360,63 +342,55 @@ body
     align-items: center;
 }
 
-.separator
-{
+.separator {
     font-size: 24px;
     font-weight: 300;
     margin-left: 25px;
     margin-right: 25px;
 }
 
-@media only screen and (max-width: 1100px) 
-{
-    .menu
-    {
+@media only screen and (max-width: 1100px) {
+    .menu {
         width: 40%;
     }
 }
 
-@media only screen and (max-width: 640px) 
-{
-    body
-    {
+@media only screen and (max-width: 640px) {
+    body {
         margin: 0;
     }
 
-    .menu
-    {
+    .menu {
         width: 70%;
         min-width: 280px;
     }
 
-    body, .app, .link-related, .sharelink, .link-wrapper 
-    {
+    body,
+    .app,
+    .link-related,
+    .sharelink,
+    .link-wrapper {
         width: 100%;
     }
 
-    .app-header
-    {
+    .app-header {
         margin-top: 30px;
         font-size: 30px;
     }
 
-    .link-related
-    {
+    .link-related {
         flex-direction: column;
     }
 
-    .link
-    {
+    .link {
         width: 60%;
     }
 
-    .separator
-    {
+    .separator {
         margin: 20px;
     }
 
-    .devices
-    {
+    .devices {
         margin-top: 30px;
     }
 }
