--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,10 @@
     <div class="menu-button"><span class="icon menu-icon"></span></div>
     <div class="curtain"></div>
     <div class="menu">
+        <div class="user-info">
+            <div class="avatar-icon"><span class="icon account-circle"></span></div>
+            <div class="username">Pink Ranger</div>
+        </div>
         <div class="file-history">
             <div class="file-history-header"><span class="icon history-icon"></span>Files history</div>
             <div class="file-list"></div>
@@ -342,6 +346,7 @@
 
         let link = document.getElementsByClassName('link')[0];
         let deviceList = document.getElementsByClassName('device-list')[0];
+        let usernameElement = document.getElementsByClassName('username')[0];
         let discoveredDevices = document.getElementsByClassName('discovered-devices')[0];
         let discoveredDeviceList = document.getElementsByClassName('discovered-device-list')[0];
         let fileHistoryList = document.getElementsByClassName('file-list')[0];
@@ -356,6 +361,9 @@
             window.history.replaceState(null, null, "/c/" + msg.roomId); //Change url only visually in browser
             link.value = window.location.href;
 
+            //Set username in menu
+            usernameElement.innerHTML = msg.username;
+
             GenerateQrCode()
         })
 
@@ -364,14 +372,15 @@
 
             link.value = window.location.href;
 
-            GenerateQrCode();
-
             deviceList.innerHTML = '';
-            Array.from(socketsInRoom).forEach((socketId) => {
-                if (socketId != socket.id)
-                    deviceList.appendChild(PresentDevice(socketId, 'web'));
+            Array.from(socketsInRoom).forEach((socketInRoom) => {
+                if (socketInRoom.id != socket.id)
+                    deviceList.appendChild(PresentDevice(socketInRoom.id, socketInRoom.username, 'web'));
+                else
+                    usernameElement.innerHTML = socketInRoom.username;
             })
             AssignDeviceListeners();
+            GenerateQrCode();
         })
 
         socket.on('discoverCallback', (msg) => {
@@ -384,9 +393,9 @@
 
             discoveredDeviceList.innerHTML = '';
 
-            Array.from(discovered).forEach((socketId) => {
-                if (socketId != socket.id)
-                    discoveredDeviceList.appendChild(PresentDevice(socketId, 'wifi'));
+            Array.from(discovered).forEach((socketInRoom) => {
+                if (socketInRoom.id != socket.id)
+                    discoveredDeviceList.appendChild(PresentDevice(socketInRoom.id, socketInRoom.username, 'wifi'));
             })
             AssignDeviceListeners();
         })
@@ -458,7 +467,7 @@
             })
         }
 
-        function PresentDevice(socketId, icon) {
+        function PresentDevice(socketId, username, icon) {
             let deviceElement = document.createElement('div');
             deviceElement.className = 'device';
             deviceElement.id = socketId;
@@ -468,7 +477,7 @@
             iconElement.style.backgroundImage = `url(/icons/${icon}.svg)`;
 
             deviceElement.appendChild(iconElement);
-            deviceElement.innerHTML += socketId;
+            deviceElement.innerHTML += username;
 
             return deviceElement;
         }
