--- a/views/index.ejs
+++ b/views/index.ejs
@@ -283,7 +283,7 @@
             let fileDownloadElement = document.createElement('div');
             if (isHistory && sent != null) {
                 fileDownloadElement.className = 'file-download';
-                fileDownloadElement.innerHTML = sent == true ? '<object class="status-icon" data="/icons/upload.svg" width="35"></object>' : '<object class="status-icon" data="/icons/download.svg" width="35"></object>';
+                fileDownloadElement.innerHTML = sent == true ? '<object class="icon status-icon" data="/icons/upload.svg" width="35"></object>' : '<object class="icon status-icon" data="/icons/download.svg" width="35"></object>';
             }
 
             let closeButton = document.createElement('span');
